setup for handling age missingness

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "induced-pepper",
+   "id": "adolescent-definition",
    "metadata": {},
    "source": [
     "# Titanic dataset -  “what sorts of people were more likely to survive?” "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-element",
+   "id": "short-nevada",
    "metadata": {},
    "source": [
     "## Data Preprocessing"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-charleston",
+   "id": "valuable-discount",
    "metadata": {},
    "source": [
     "### Import Python libraries"
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "included-texture",
+   "execution_count": 33,
+   "id": "infrared-technique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-puppy",
+   "id": "bigger-tuner",
    "metadata": {},
    "source": [
     "### Load dataset"
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "rational-alloy",
+   "execution_count": 34,
+   "id": "descending-algeria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "central-utilization",
+   "execution_count": 35,
+   "id": "juvenile-chassis",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "patent-colonial",
+   "execution_count": 36,
+   "id": "pacific-fighter",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "max    1309.000000    3.000000   76.000000    8.000000    9.000000  512.329200"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "entitled-surveillance",
+   "execution_count": 37,
+   "id": "behind-conditioning",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "given-keyboard",
+   "id": "naked-difference",
    "metadata": {},
    "source": [
     "**The dataset contains 12 features, with only 9 relevant to building our model.**"
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worldwide-spanish",
+   "id": "suspected-attachment",
    "metadata": {},
    "source": [
     "### Data Transformation"
@@ -517,8 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "restricted-mechanism",
+   "execution_count": 38,
+   "id": "knowing-worker",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "4         1           0           1"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "appointed-tobacco",
+   "execution_count": 39,
+   "id": "copyrighted-avatar",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "powerful-tampa",
+   "id": "artificial-bathroom",
    "metadata": {},
    "source": [
     "**New dataset containing only numerical values**"
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accepted-alexander",
+   "id": "featured-shark",
    "metadata": {},
    "source": [
     "### Check for class imbalance"
@@ -751,8 +751,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "spatial-defense",
+   "execution_count": 40,
+   "id": "protected-relation",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "1            342  290    342    342   342       342         342         342"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "framed-operation",
+   "id": "choice-apartment",
    "metadata": {},
    "source": [
     "**Data set contains about 62% individuals who died in the crash and about 38% who survived, showing class imbalance.**\n",
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intense-twist",
+   "id": "consolidated-interim",
    "metadata": {},
    "source": [
     "### Handling Missing Data"
@@ -860,8 +860,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "narrative-operation",
+   "execution_count": 41,
+   "id": "progressive-translation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,8 +870,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "similar-cooler",
+   "execution_count": 42,
+   "id": "compressed-armenia",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,18 +899,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 164,
-   "id": "regulation-spokesman",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.impute import KNNImputer"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "portuguese-italy",
+   "id": "starting-revolution",
    "metadata": {},
    "source": [
     "#### First, Scaling the dataset"
@@ -918,8 +908,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "superb-better",
+   "execution_count": 45,
+   "id": "straight-uniform",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "further-spending",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "max      1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,9 +1087,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "august-century",
+   "metadata": {},
+   "source": [
+    "**DataFrame before scaling**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "understanding-complex",
+   "execution_count": 46,
+   "id": "steady-samoa",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1255,7 @@
        "max      1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,9 +1267,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "accredited-montreal",
+   "metadata": {},
+   "source": [
+    "**DataFrame after scaling**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "immune-republic",
+   "execution_count": 47,
+   "id": "offensive-specific",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,8 +1288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "rough-given",
+   "execution_count": 48,
+   "id": "outdoor-spray",
    "metadata": {},
    "outputs": [
     {
@@ -1476,19 +1492,19 @@
        "[342 rows x 9 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "survived"
+    "survived # Dataframe containing only people who survived, here KNN Imputation will calculate for missing age rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "significant-chair",
+   "execution_count": 49,
+   "id": "basic-gambling",
    "metadata": {},
    "outputs": [
     {
@@ -1691,34 +1707,13 @@
        "[549 rows x 9 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dead"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "id": "declared-shirt",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "heard-catalyst",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imputer = KNNImputer(n_neighbors=5)\n",
-    "imputed_data = pd.DataFrame(imputer.fit_transform(scaled_data),columns = scaled_data.columns)"
+    "dead # Dataframe containing people who didnt survive, here missing age rows will be dropped"
    ]
   }
  ],
