Handling missing values using KNNImputer

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "proof-pontiac",
-=======
-   "id": "detailed-billion",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "# Titanic dataset -  “what sorts of people were more likely to survive?” "
@@ -14,11 +10,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "frozen-irish",
-=======
-   "id": "fatty-matter",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "## Data Preprocessing"
@@ -26,11 +18,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "considerable-anaheim",
-=======
-   "id": "adjusted-cruise",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "### Import Python libraries"
@@ -38,13 +26,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
    "id": "consistent-wesley",
-=======
-   "execution_count": 33,
-   "id": "material-adapter",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +40,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "skilled-history",
-=======
-   "id": "matched-algorithm",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "### Load dataset"
@@ -69,13 +48,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
    "id": "mysterious-selection",
-=======
-   "execution_count": 34,
-   "id": "alpine-consultation",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,174 +60,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
    "id": "brutal-strand",
-=======
-   "execution_count": 37,
-   "id": "chief-microphone",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
-       "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "unexpected-liquid",
-   "metadata": {},
-   "source": [
-    "**The dataset contains 12 features, with only 9 relevant to building our model.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "charged-seeker",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -393,11 +201,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-<<<<<<< HEAD
      "execution_count": 3,
-=======
-     "execution_count": 35,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,13 +214,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
    "id": "inside-substitute",
-=======
-   "execution_count": 36,
-   "id": "controversial-visit",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -537,11 +336,7 @@
        "max    1309.000000    3.000000   76.000000    8.000000    9.000000  512.329200"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 4,
-=======
-     "execution_count": 36,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,23 +347,9 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 5,
    "id": "essential-green",
-=======
-   "cell_type": "markdown",
-   "id": "dried-payday",
-   "metadata": {},
-   "source": [
-    "### Data Transformation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "accurate-documentary",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +373,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-<<<<<<< HEAD
        "      <th>PassengerId</th>\n",
        "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
@@ -605,11 +385,6 @@
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
-=======
-       "      <th>Sex_male</th>\n",
-       "      <th>Embarked_Q</th>\n",
-       "      <th>Embarked_S</th>\n",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -617,7 +392,6 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-<<<<<<< HEAD
        "      <td>3</td>\n",
        "      <td>Braund, Mr. Owen Harris</td>\n",
        "      <td>male</td>\n",
@@ -803,33 +577,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-=======
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -844,11 +591,7 @@
        "4         1           0           1"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 6,
-=======
-     "execution_count": 38,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +605,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 7,
    "id": "pharmaceutical-prisoner",
    "metadata": {},
@@ -876,10 +618,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "restricted-extra",
-=======
-   "execution_count": 39,
-   "id": "respective-arena",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -995,31 +733,18 @@
        "4           1  "
       ]
      },
-<<<<<<< HEAD
      "execution_count": 8,
-=======
-     "execution_count": 39,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
-=======
-    "train_data = train_data.drop(['Sex', 'Embarked', 'Ticket', 'Cabin', 'Name', 'PassengerId'], axis=1) # dropping less relevant features\n",
-    "num_data = pd.concat([train_data, cat_dummies], axis=1) # concactinating main dataset with encoded data\n",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
     "num_data.head()"
    ]
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "arranged-ministry",
-=======
-   "id": "wrapped-coach",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "**New dataset containing only numerical values**"
@@ -1027,11 +752,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "dental-romania",
-=======
-   "id": "compatible-burner",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "### Check for class imbalance"
@@ -1039,13 +760,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
    "id": "attempted-contents",
-=======
-   "execution_count": 40,
-   "id": "original-beginning",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -1124,11 +840,7 @@
        "1            342  290    342    342   342       342         342         342"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 9,
-=======
-     "execution_count": 40,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,11 +851,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "assured-hunter",
-=======
-   "id": "western-button",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "**Data set contains about 62% individuals who died in the crash and about 38% who survived, showing class imbalance.**\n",
@@ -1153,11 +861,7 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
    "id": "allied-pakistan",
-=======
-   "id": "national-guatemala",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "source": [
     "### Handling Missing Data"
@@ -1165,13 +869,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
    "id": "bigger-appraisal",
-=======
-   "execution_count": 41,
-   "id": "printable-orientation",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,13 +879,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
    "id": "built-durham",
-=======
-   "execution_count": 42,
-   "id": "preceding-correlation",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -1204,11 +898,7 @@
        "dtype: int64"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 11,
-=======
-     "execution_count": 42,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +908,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 12,
    "id": "internal-murray",
@@ -1235,34 +924,12 @@
    "metadata": {},
    "source": [
     "<h2>First, Scaling the dataset</h2>"
-=======
-   "cell_type": "markdown",
-   "id": "aboriginal-ownership",
-   "metadata": {},
-   "source": [
-    "#### First, Scaling the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "collaborative-cooper",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler"
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 13,
    "id": "quick-selection",
-=======
-   "execution_count": 44,
-   "id": "cleared-closing",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -1420,11 +1087,7 @@
        "max      1.000000    1.000000    1.000000  "
       ]
      },
-<<<<<<< HEAD
      "execution_count": 13,
-=======
-     "execution_count": 44,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1097,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 14,
    "id": "excessive-royal",
@@ -1442,24 +1104,12 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler"
-=======
-   "cell_type": "markdown",
-   "id": "certain-devices",
-   "metadata": {},
-   "source": [
-    "**DataFrame before scaling**"
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 15,
    "id": "conservative-detroit",
-=======
-   "execution_count": 46,
-   "id": "higher-dialogue",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -1617,11 +1267,7 @@
        "max      1.000000    1.000000    1.000000  "
       ]
      },
-<<<<<<< HEAD
      "execution_count": 15,
-=======
-     "execution_count": 46,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,23 +1279,9 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 16,
    "id": "documentary-asthma",
-=======
-   "cell_type": "markdown",
-   "id": "christian-textbook",
-   "metadata": {},
-   "source": [
-    "**DataFrame after scaling**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "verbal-allocation",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,13 +1292,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 17,
    "id": "returning-speed",
-=======
-   "execution_count": 48,
-   "id": "premier-faith",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -1869,32 +1496,19 @@
        "[342 rows x 9 columns]"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 17,
-=======
-     "execution_count": 48,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
     "survived"
-=======
-    "survived # Dataframe containing only people who survived, here KNN Imputation will calculate for missing age rows"
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 18,
    "id": "experienced-destruction",
-=======
-   "execution_count": 49,
-   "id": "annual-bulgarian",
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +1711,6 @@
        "[549 rows x 9 columns]"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
@@ -2932,19 +2545,22 @@
       ]
      },
      "execution_count": 25,
-=======
-     "execution_count": 49,
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
     "combined_df.groupby(by=\"Survived\").count()"
-=======
-    "dead # Dataframe containing people who didnt survive, here missing age rows will be dropped"
->>>>>>> f37ed55311f2275c444ad3551f64e7997089cba1
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lucky-brooklyn",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#little change for pull request, hope it works. Hurrayyy!!!"
    ]
   }
  ],
